--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.4.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.77.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
